-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.1, 5.4.2, 5.5.0
-
None
-
Kubuntu, Windows 7
-
c318fceaccb1ee23a567f1bb032df45417217e09
It's very simple to reproduce. Just place that on window:
TextEdit { selectByMouse: true x: 160 y: 101 text: "Да, но как же" readOnly: true } TextEdit { selectByMouse: true x: 160 y: 131 text: "Держи в уме" readOnly: true }
And try to select all that text using mouse. I've attached the result.
text property contains words "Yes, but how" in russian, using cyrillic symbols. And something goes wrong with word "but" ("но") in 5.4.1, 5.4.2.
Second text edit contains "Держи в уме" ("Keep in mind" in Eniglish). That's a bit funny, but first text edit highlights text just fine in the latest 5.5.0, but this text edit shows the same error for letter "в" ("in").
I've also attached tiny project for that bug.
- replaces
-
QTBUG-47518 Bug with displaying of selected Cyrillic text
-
- Closed
-